--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>The Pixelizer</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Oxygen" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
